Changed unique id assignment implementation